--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <div class="containerAll">
       <nav class="navContainer">
-        <div class="logoDiv">
-          <a href="./index.html"><h1 class="logoText">Silas Lundquist</h1></a>
-        </div>
+        <a class="logoBox" href="./index.html">
+          <img class="SLLogo" src="./assets/icons/slSymbol.png" alt="S L Logo" />
+          <h1 class="logoText">Silas Lundquist</h1>
+        </a>
         <div class="navItems">
           <a class="internLink" href="./public/contact.html"><h2 class="internalLinkText">contact</h2></a>
           <a class="internLink" href="./public/about.html"><h2 class="internalLinkText">about</h2></a>
         </div>
-        <div class="navlinks">
+        <div class="navLinks">
           <a class="linkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
             <img class="linkIcon" src="./assets/icons/instagramLogo.png" alt="instagram.com logo" />
             <p class="linkText">instagram</p>
@@ -47,9 +48,23 @@
         </div>
       </div>
       <footer class="footer">
-        <div class="footerInternalLinks">
-          <a class="footerInternalLinksLinkContainer" href="./public/contact.html"><h2 class="footerInternalLinksText">contact</h2></a>
-          <a class="footerInternalLinksLinkContainer" href="./public/about.html"><h2 class="footerInternalLinksText">about</h2></a>
+        <div class="footerInternalLinksContainer">
+          <a class="footerInternalLink" href="./public/contact.html"><h2 class="footerInternalLinksText">contact</h2></a>
+          <a class="footerInternalLink" href="./public/about.html"><h2 class="footerInternalLinksText">about</h2></a>
+        </div>
+        <div class="footerExternalLinksContainer">
+          <a class="footerExternalLinkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
+            <img class="footerLinkIcon" src="./assets/icons/instagramLogo.png" alt="instagram.com logo" />
+          </a>
+          <a class="footerExternalLinkBox" target="_blank" href="https://unsplash.com/@silaslundquist">
+            <img class="footerLinkIcon" src="./assets/icons/unsplashLogo.png" alt="unsplash.com logo" />
+          </a>
+          <a class="footerExternalLinkBox" target="_blank" href="https://www.linkedin.com/in/silas-lundquist-595246326/">
+            <img class="footerLinkIcon" src="./assets/icons/linkedinLogo.png" alt="linkedin.com logo" />
+          </a>
+          <a class="footerExternalLinkBox" target="_blank" href="https://x.com/silaslundquist">
+            <img class="footerLinkIcon" src="./assets/icons/xLogo.png" alt="x.com logo" />
+          </a>
         </div>
       </footer>
     </div>
