--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@
             <img class="portfolioElementImage" src="./assets/images/birthdayPartyInvite.png" alt="website screenshot" />
           </a>
         </div>
+        <!-- <h2 class="appTitle">Education & Experience</h2>
+        <div class="educationAndExperienceElements"></div>
+        <h2 class="appTitle"></h2>
+        (To add later when expanding the site)-->
       </div>
       <footer class="footer">
         <div class="footerInternalLinksContainer">
-          <a class="footerInternalLink" href="./public/contact.html"><h2 class="footerInternalLinksText">contact</h2></a>
-          <a class="footerInternalLink" href="./public/about.html"><h2 class="footerInternalLinksText">about</h2></a>
+          <a class="footerInternalLink" href="./public/contact.html">
+            <h2 class="footerInternalLinksText">contact</h2>
+          </a>
+          <a class="footerInternalLink" href="./public/about.html">
+            <h2 class="footerInternalLinksText">about</h2>
+          </a>
         </div>
         <div class="footerExternalLinksContainer">
           <a class="footerExternalLinkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
@@ -65,6 +73,13 @@
           <a class="footerExternalLinkBox" target="_blank" href="https://x.com/silaslundquist">
             <img class="footerLinkIcon" src="./assets/icons/xLogo.png" alt="x.com logo" />
           </a>
+          <a class="footerExternalLinkBox" target="_blank" href="https://www.youtube.com/@silaslundquist">
+            <img class="footerLinkIcon" src="./assets/icons/YTLogo.png" alt="youtube.com Logo" />
+          </a>
+        </div>
+        <div class="footerCopyrightContainer">
+          <img class="footerCopyrightLogo" src="./assets/icons/slSymbol.png" alt="S L Logo" />
+          <p class="footerCopyrightText">© 2024 Silas Lundquist</p>
         </div>
       </footer>
     </div>
