--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <a class="internLink" href="./public/about.html"><h2 class="internalLinkText">about</h2></a>
         </div>
         <div class="navLinks">
-          <a class="linkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
+          <a id="link1" data-tooltip="silaslundquist" class="linkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
             <img class="linkIcon" src="./assets/icons/instagramLogo.png" alt="instagram.com logo" />
             <p class="linkText">instagram</p>
           </a>
-          <a class="linkBox" target="_blank" href="https://unsplash.com/@silaslundquist">
+          <a id="link2" class="linkBox" target="_blank" href="https://unsplash.com/@silaslundquist">
             <img class="linkIcon" src="./assets/icons/unsplashLogo.png" alt="unsplash.com logo" />
             <p class="linkText">unsplash</p>
           </a>
