--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/wor7zau.css" />
   </head>
   <body>
-    <nav class="nav">
-      <a class="logo" href="./index.html">
-        <h1 class="logoText">slundquist.github.io</h1>
-      </a>
-      <div class="navLinks">
-        <a id="link1" data-tooltip="Instagram" class="linkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
-          <img class="linkIcon" src="./assets/icons/instagramLogo.svg" alt="instagram.com logo" />
+    <div class="start">
+      <nav class="nav">
+        <a class="logo" href="./index.html">
+          <h1 class="logoText">slundquist.github.io</h1>
         </a>
-        <a id="link2" data-tooltip="Unsplash" class="linkBox" target="_blank" href="https://unsplash.com/@silaslundquist">
-          <img class="linkIcon" src="./assets/icons/unsplashLogo.png" alt="unsplash.com logo" />
-        </a>
-        <a id="link3" data-tooltip="LinkedIn" class="linkBox" target="_blank" href="https://www.linkedin.com/in/silas-lundquist-595246326/">
-          <img class="linkIcon" src="./assets/icons/linkedinLogo.png" alt="linkedin.com logo" />
-        </a>
-        <!--Add more external links here. Wrap an icon (svg img) an "a" tag-->
-      </div>
-    </nav>
-    <div class="appContainer">
+        <div class="navLinks">
+          <a id="link1" data-tooltip="Instagram" class="linkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
+            <img class="linkIcon" src="./assets/icons/instagramLogo.svg" alt="instagram.com logo" />
+          </a>
+          <a id="link2" data-tooltip="Unsplash" class="linkBox" target="_blank" href="https://unsplash.com/@silaslundquist">
+            <img class="linkIcon" src="./assets/icons/unsplashLogo.png" alt="unsplash.com logo" />
+          </a>
+          <a id="link3" data-tooltip="LinkedIn" class="linkBox" target="_blank" href="https://www.linkedin.com/in/silas-lundquist-595246326/">
+            <img class="linkIcon" src="./assets/icons/linkedinLogo.png" alt="linkedin.com logo" />
+          </a>
+          <!--Add more external links here. Wrap an icon (svg img) an "a" tag-->
+        </div>
+      </nav>
       <div class="introduction">
         <h2 class="introductionTitle">Hi, I'm <strong class="textColorAccent3">Silas Lundquist</strong></h2>
         <h3 class="introductionTag">Web <strong class="textColorAccent1">Developer</strong>, Web <strong class="textColorAccent2">Designer</strong></h3>
@@ -39,6 +40,7 @@
         <img class="arrow" src="./assets/icons/arrow.svg" />
       </div>
     </div>
+    <div class="space"></div>
     <footer class="footer">
       <div class="footerLinksContainer">
         <a class="footerLinkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
@@ -62,6 +64,5 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
-    </script>
   </body>
 </html>
