--- a/index.html
+++ b/index.html
@@ -40,7 +40,47 @@
         <img class="arrow" src="./assets/icons/arrow.svg" />
       </div>
     </div>
-    <div class="space"></div>
+    <!-- <div class="space"></div> -->
+    <div class="webContent">
+      <div class="projects">
+        <h4 class="sectionHeading">Recent Projects</h4>
+        <div class="projectElements">
+          <div id="box1" class="box"></div>
+          <div id="box2" class="box"></div>
+          <div id="box3" class="box"></div>
+          <div id="box4" class="box"></div>
+        </div>
+      </div>
+      <div class="photography">
+        <h4 class="sectionHeading">Photography</h4>
+        <div class="photographyElements">
+          <div id="pbox1" class="pbox">
+            <img class="photo" src="./assets/images/photo1.jpg" alt="" />
+          </div>
+          <div id="pbox2" class="pbox">
+            <img class="photo" src="./assets/images/photo2.jpg" alt="" />
+          </div>
+          <div id="pbox3" class="pbox">
+            <img class="photo" src="./assets/images/photo3.jpg" alt="" />
+          </div>
+          <div id="pbox4" class="pbox">
+            <img class="photo" src="./assets/images/photo4.jpg" alt="" />
+          </div>
+          <div id="pbox5" class="pbox">
+            <img class="photo" src="./assets/images/photo5.jpg" alt="" />
+          </div>
+          <div id="pbox6" class="pbox">
+            <img class="photo" src="./assets/images/photo6.jpg" alt="" />
+          </div>
+          <div id="pbox7" class="pbox">
+            <img class="photo" src="./assets/images/photo7.jpg" alt="" />
+          </div>
+          <div id="pbox8" class="pbox">
+            <img class="photo" src="./assets/images/photo8.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footerLinksContainer">
         <a class="footerLinkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
