Updated Images & Responsiveness
Added media queries for responsiveness on grid systems
Make images into links so that they redirect to unsplash.com
Updated hover on images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="arrow" src="./assets/icons/arrow.svg" />
       </div>
     </div>
-    <!-- <div class="space"></div> -->
+    <div class="space"></div>
     <div class="webContent">
       <div class="projects">
         <h4 class="sectionHeading">Recent Projects</h4>
@@ -51,36 +51,38 @@
           <div id="box4" class="box"></div>
         </div>
       </div>
+      <div class="space"></div>
       <div class="photography">
         <h4 class="sectionHeading">Photography</h4>
         <div class="photographyElements">
-          <div id="pbox1" class="pbox">
-            <img class="photo" src="./assets/images/photo1.jpg" alt="" />
-          </div>
-          <div id="pbox2" class="pbox">
-            <img class="photo" src="./assets/images/photo2.jpg" alt="" />
-          </div>
-          <div id="pbox3" class="pbox">
-            <img class="photo" src="./assets/images/photo3.jpg" alt="" />
-          </div>
-          <div id="pbox4" class="pbox">
-            <img class="photo" src="./assets/images/photo4.jpg" alt="" />
-          </div>
-          <div id="pbox5" class="pbox">
-            <img class="photo" src="./assets/images/photo5.jpg" alt="" />
-          </div>
-          <div id="pbox6" class="pbox">
-            <img class="photo" src="./assets/images/photo6.jpg" alt="" />
-          </div>
-          <div id="pbox7" class="pbox">
-            <img class="photo" src="./assets/images/photo7.jpg" alt="" />
-          </div>
-          <div id="pbox8" class="pbox">
-            <img class="photo" src="./assets/images/photo8.jpg" alt="" />
-          </div>
+          <a href="https://unsplash.com/photos/a-view-of-a-city-with-a-river-in-the-background-y7Ldk3zjdTU" class="photo" id="photo1">
+            <img src="./assets/images/photo1.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo2">
+            <img src="./assets/images/photo2.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo3">
+            <img src="./assets/images/photo3.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo4">
+            <img src="./assets/images/photo4.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo5">
+            <img src="./assets/images/photo5.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo6">
+            <img src="./assets/images/photo6.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo7">
+            <img src="./assets/images/photo7.jpg" alt="" class="source" />
+          </a>
+          <a href="" class="photo" id="photo8">
+            <img src="./assets/images/photo8.jpg" alt="" class="source" />
+          </a>
         </div>
       </div>
     </div>
+    <div class="space"></div>
     <footer class="footer">
       <div class="footerLinksContainer">
         <a class="footerLinkBox" target="_blank" href="https://www.instagram.com/silaslundquist/">
