--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <h3 class="introductionTag">Web <strong class="textColorAccent1">Developer</strong>, Web <strong class="textColorAccent2">Designer</strong></h3>
       </div>
       <div class="separator">
-        <img class="arrow" src="./assets/icons/arrow.svg" />
+        <div class="arrowContainer">
+          <img class="arrow" src="./assets/icons/arrow.svg" />
+        </div>
       </div>
     </div>
     <div class="space"></div>
@@ -45,39 +47,55 @@
       <div class="projects">
         <h4 class="sectionHeading">Recent Projects</h4>
         <div class="projectElements">
-          <div id="box1" class="box"></div>
-          <div id="box2" class="box"></div>
-          <div id="box3" class="box"></div>
-          <div id="box4" class="box"></div>
+          <a href="" class="box" id="box1" target="_blank">
+            <img src="./assets/images/screenshots/princingTable.png" alt="" class="screenshot" />
+          </a>
+          <a href="" class="box" id="box2" target="_blank">
+            <!-- <img src="" alt="" class="screenshot" /> -->
+          </a>
+          <a href="" class="box" id="box3" target="_blank">
+            <!-- <img src="" alt="" class="screenshot" /> -->
+          </a>
+          <a href="" class="box" id="box4" target="_blank">
+            <!-- <img src="" alt="" class="screenshot" /> -->
+          </a>
         </div>
       </div>
       <div class="space"></div>
       <div class="photography">
         <h4 class="sectionHeading">Photography</h4>
         <div class="photographyElements">
-          <a href="https://unsplash.com/photos/a-view-of-a-city-with-a-river-in-the-background-y7Ldk3zjdTU" class="photo" id="photo1">
+          <a href="https://unsplash.com/photos/a-view-of-a-city-with-a-river-in-the-background-y7Ldk3zjdTU" class="photo" id="photo1" target="_blank">
             <img src="./assets/images/photo1.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo2">
+          <a href="https://unsplash.com/photos/a-dirt-road-in-the-middle-of-a-forest-qK4JV_OHF24" class="photo" id="photo2" target="_blank">
             <img src="./assets/images/photo2.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo3">
+          <a href="https://unsplash.com/photos/a-close-up-of-a-red-fire-hydrant-with-a-bus-in-the-background-OJx0XamTEiE" class="photo" id="photo3" target="_blank">
             <img src="./assets/images/photo3.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo4">
+          <a href="https://unsplash.com/photos/a-tall-wooden-tower-in-the-middle-of-a-forest-elxOHvPbQOw" class="photo" id="photo4" target="_blank">
             <img src="./assets/images/photo4.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo5">
+          <a href="https://unsplash.com/photos/a-close-up-of-a-green-moss-covered-ground-7AAz5yHl-hM" class="photo" id="photo5" target="_blank">
             <img src="./assets/images/photo5.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo6">
+          <a href="https://unsplash.com/photos/a-tall-building-with-a-sky-in-the-background-oL7PNllluKo" class="photo" id="photo6" target="_blank">
             <img src="./assets/images/photo6.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo7">
+          <a href="https://unsplash.com/photos/a-close-up-of-a-stained-glass-window-vCJJZPQjiuQ" class="photo" id="photo7" target="_blank">
             <img src="./assets/images/photo7.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
-          <a href="" class="photo" id="photo8">
+          <a href="https://unsplash.com/photos/a-blue-mailbox-sitting-on-the-side-of-a-road-mKw9qPBjk9A" class="photo" id="photo8" target="_blank">
             <img src="./assets/images/photo8.jpg" alt="" class="source" />
+            <img src="./assets/icons/externalLink.svg" alt="" class="externalLinkIcon" />
           </a>
         </div>
       </div>
@@ -92,7 +110,7 @@
           <img class="linkIcon" src="./assets/icons/unsplashLogo.png" alt="unsplash.com logo" />
         </a>
         <a class="footerLinkBox" target="_blank" href="https://www.linkedin.com/in/silas-lundquist-595246326/">
-          <img class="linkIcon" src="./assets/icons/linkedinLogo.png" alt="linkedin.com logo" />
+          <img id="footerLink2" class="linkIcon" src="./assets/icons/linkedinLogo.png" alt="linkedin.com logo" />
         </a>
         <a class="footerLinkBox" target="_blank" href="https://x.com/silaslundquist">
           <img class="linkIcon" src="./assets/icons/xLogo.png" alt="x.com logo" />
