--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </a>
       </div>
       <div class="footerCopyrightContainer">
-        <p class="footerCopyrightText">MIT Copyright © 2024 Silas Lundquist</p>
+        <p class="footerCopyrightText">© 2024 Silas Lundquist</p>
       </div>
     </footer>
     <script src="./js/main.js"></script>
