--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
       <div class="introduction">
         <h2 class="introductionTitle">Hi, I'm <strong class="textColorAccent3">Silas Lundquist</strong></h2>
-        <h3 class="introductionTag">Web <strong class="textColorAccent1">Developer</strong>, Web <strong class="textColorAccent2">Designer</strong></h3>
+        <!-- <h3 class="introductionTag">Web <strong class="textColorAccent1">Developer</strong>, Web <strong class="textColorAccent2">Designer</strong></h3> -->
       </div>
       <div class="separator">
         <div class="arrowContainer">
@@ -50,8 +50,8 @@
           <a href="" class="box" id="box1" target="_blank">
             <img src="./assets/images/screenshots/princingTable.png" alt="" class="screenshot" />
           </a>
-          <a href="" class="box" id="box2" target="_blank">
-            <!-- <img src="" alt="" class="screenshot" /> -->
+          <a href="https://slundquist.github.io/Clock-App" class="box" id="box2" target="_blank">
+             <embed type="text/html" src="https://slundquist.github.io/Clock-App">
           </a>
           <a href="" class="box" id="box3" target="_blank">
             <!-- <img src="" alt="" class="screenshot" /> -->
